@@ -8,7 +8,9 @@ Bug fixes
 - CFDSTUDY (Salome): fix issues with dissapearing windows onserved on
   some actual systems such as Debian 9 and Ubuntu 16.04.
 
-- Lagrangian Module: fix crash in some cases with no deposition model.
+- Lagrangian Module:
+  * Fix crash in some cases with no deposition model.
+  * Fix errors in deposition/reentrainment model.
 
 - Fix missing free surface boundary movement in some cases depending on
   which pages were visited in the GUI (GitHub issue #27).
